plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.graalvm.buildtools.native' version '0.9.28'
}

group = 'com.project'
version = '0.0.1-SNAPSHOT'
description = 'Gradle project'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	implementation 'org.springframework.boot:spring-boot-starter-web'

	implementation 'commons-validator:commons-validator:1.10.1'
	implementation 'commons-codec:commons-codec:1.17.1'

	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	implementation 'org.telegram:telegrambots-springboot-longpolling-starter:7.11.0'
	implementation 'org.telegram:telegrambots-client:7.11.0'

	implementation 'org.springframework.boot:spring-boot-starter-mail'

	implementation 'com.auth0:java-jwt:4.4.0'

	implementation 'org.springframework.retry:spring-retry:2.0.11'

	implementation 'org.springframework:spring-aspects'

	implementation platform('software.amazon.awssdk:bom:2.25.0')
	implementation 'software.amazon.awssdk:s3'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

}

tasks.named('test') {
	useJUnitPlatform()
}
tasks.withType(JavaCompile) {
	options.compilerArgs << '-parameters'
}